# DevOpsBestPractices

./: .setup_complete  CLAUDE.md  CONTRIBUTING.md  LICENSE  MONITORING_DIAGNOSTICS_READY.md  README-monitoring.md  README.md  STRUCTURE.md  setup_devops_repo.sh
.github/workflows/: ci.yml  validate-scripts.yml
ContainerNewsLocal/: check_duplicates.py  check_results.py  comprehensive_historical_collector.py  daily_comprehensive_aggregator.py  debug_dates.py  historical_news_collector_3months.py  simple_historical_collector.py  simple_rss_improved.py
ContainerNewsLocal/data/: comprehensive_news.db  comprehensive_report_20251101_1200.json  container_news.db  demo_results.json  enhanced_container_news.db  historical_3months_news.db  historical_3months_summary_20251101_090403.json  minimal_news.db  quick_news_demo.db  quick_real_news.db  real_cases.db  simple_historical_news.db  simple_report_20251101_0916.json  simple_report_20251101_0918.json  simple_report_20251101_0926.json
QwenAgent/: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_COMPLETE_2026_02_04.md  MODE_SYSTEM_GUIDE.md  Makefile  PHASE3_ORCHESTRATOR_INTEGRATION_COMPLETE_2026_02_04.md  PHASE4_COMPLETE_2026_02_04.md  QWENCODE_UPGRADE_COMPLETE_2026_01_26.md  README.md  SESSION_COMPLETE_WEEK1.5_2026_02_04.md  START_HERE_WEEK1_SUCCESS.txt  SWECAS_INTEGRATION_SUMMARY_2026_01_28.md  SWECAS_TAXONOMY.md  TIMEOUT_SYSTEM_IMPLEMENTATION.md  _test_diff.py  cost_analyzer.py  create_package.py  docker-compose.yml  example.py  install.bat  patterns_report.html  patterns_report.json  patterns_report.md  qwencode_fastapi.py  qwencode_server.py  qwencode_unified_server.py  requirements.txt  run_autonomous_demo.py  run_swebench_v3.py  run_tests.bat  server.py  start.bat  test_autonomous_api.py  test_autonomous_workflow.py  test_ollama_newlines.py  test_phase2_budget.py  test_phase3_predictive.py  (+1 more)
QwenAgent/benchmark/: __init__.py  ab_runner.py
QwenAgent/code_validator/: README.md  __init__.py  example_usage.py  prevalidator.py  property_tests.py  pyproject.toml  requirements.txt  resource_guard.py  sandbox.py  static_analysis.py  validator.py
QwenAgent/code_validator/rules/: __init__.py  antipattern_rules.py  async_safety.py  base.py  decorator_red_flags.py  devops_validators.py  exception_rules.py  extended_domain_rules.py  external_validators.py  production_readiness.py  promise_checker.py  python_validators.py  search_guard.py
QwenAgent/core/: __init__.py  adaptive_neural_router.py  adaptive_pipeline.py  agent.py  bilingual_context_router.py  budget_estimator.py  config.py  config_validator.py  cot_engine.py  cross_arch_review.py  deep6_minsky.py  deep_mode_v2.py  ducs_classifier.py  execution_mode.py  intent_scheduler.py  no_llm_responder.py  orchestrator.py  outcome_tracker.py  pattern_discovery.py  pattern_router.py  plan_mode.py  predictive_estimator.py  query_crystallizer.py  query_modifier.py  qwencode_agent.py  repo_manager.py  research_context.py  router.py  search_translator.py  semantic_swecas.py  solution_cache.py  static_analyzer.py  streaming_llm_client.py  subagent.py  swebench_pipeline.py  swebench_runner.py  swecas_classifier.py  swecas_search_cache.json  task_abstraction.py  tier1_5_classifier.py  (+7 more)
QwenAgent/docs/: WEEK1_MULTI_CANDIDATE.md
QwenAgent/swebench_results/: swebench_v3_20260130_142457.json
QwenAgent/templates/: terminal.html  (+1 more)
container-docker-podman/: COMPARISON.md  INSTALLATION.md  README.md
industrial/: README.md
scripts/: install-use-method-dashboard.sh
(+264 files in other folders)
