[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-validator"
version = "1.0.0"
description = "Многоуровневая система валидации AI-сгенерированного Python-кода"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Code Validator Team"}
]
keywords = [
    "validation",
    "code-analysis", 
    "sandbox",
    "security",
    "ai-generated-code",
    "static-analysis",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Базовые зависимости — нет (только stdlib)
dependencies = []

[project.optional-dependencies]
# Статический анализ
static = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

# Property-тестирование
testing = [
    "hypothesis>=6.100.0",
]

# Расширенная песочница
sandbox = [
    "RestrictedPython>=7.0",
]

# Мониторинг ресурсов
monitoring = [
    "psutil>=5.9.0",
]

# Всё вместе
full = [
    "ruff>=0.4.0",
    "mypy>=1.10.0", 
    "bandit>=1.7.0",
    "hypothesis>=6.100.0",
    "RestrictedPython>=7.0",
    "psutil>=5.9.0",
]

# Разработка
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/example/code-validator"
Documentation = "https://github.com/example/code-validator#readme"
Repository = "https://github.com/example/code-validator"
Issues = "https://github.com/example/code-validator/issues"

[project.scripts]
code-validator = "code_validator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_validator*"]

# Конфигурация инструментов
# -------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert
]

[tool.ruff.per-file-ignores]
"example_usage.py" = ["S"]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "hypothesis.*",
    "RestrictedPython.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["code_validator"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
